--- a/Management/manage/templates/appointments.html
+++ b/Management/manage/templates/appointments.html
@@ -45,6 +45,10 @@
             <input type="date" style="width:85%; margin-left:70%;height:4%" name="date"></input> <br>         
             <h3 style= "margin-left:73%">Appointment Time</h3>
             <input type="time" style="width:85%; margin-left:70%;height:4%" name="time"><br><br>
+                    
+             <h3>Payment Mode</h3>
+            <input type="radio" name="credit">1. Credit Card </input>
+            <input type="radio" name="cash">2. Cash Payment</input>       
             
             <button style="margin-left:75%;height:4%" type="submit" value="submit" class="form-control btn btn-primary">Book</button>
           </center>  
